# Teams_Ai_PyHelper

./: README.md
teams-ollama-bridge/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
teams-ollama-bridge/scripts/: check.cmd  check.ps1  run-ps1.cmd  run_once.cmd  run_once.ps1  setup.cmd  setup.ps1  start.cmd  start.ps1  test.cmd  test.ps1
teams-ollama-bridge/src/teams_ollama_bridge/: __init__.py  __main__.py  agent_loop.py  attachment_context_builder.py  attachment_resolver.py  attachment_service.py  attachment_types.py  cli.py  config.py  document_extractor.py  exceptions.py  file_service.py  image_processor.py  logging_config.py  mcp_client.py  mcp_models.py  mcp_result_normalizer.py  mcp_tool_registry.py  mock_processor.py  models.py  ollama_client.py  processor.py  repository.py  text_cleaner.py  tool_policy.py  utils.py  worker.py
teams-ollama-bridge/tests/: conftest.py  test_attachment_prompt_limit.py  test_attachments.py  test_file_stability.py  test_mcp.py  test_mock_processor.py  test_models.py  test_ollama_client.py  test_output_schema.py  test_repository.py  test_text_cleaner.py  test_worker_duplicate.py  test_worker_failure.py  test_worker_success.py
