[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teams-ollama-bridge"
version = "1.0.0"
description = "Dateibasierte Brücke zwischen Microsoft Teams (via OneDrive) und Ollama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "filelock>=3.16.0",
    "tenacity>=9.0.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[project.scripts]
teams-ollama-bridge = "teams_ollama_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/teams_ollama_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["teams_ollama_bridge"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["fitz", "openpyxl.*"]
ignore_missing_imports = true
